--- a/app/src/main/res/layout/activity_login_home.xml
+++ b/app/src/main/res/layout/activity_login_home.xml
@@ -10,7 +10,7 @@
 
     <ImageView
         android:id="@+id/imageLogo"
-        android:layout_width="@dimen/_250sdp"
+        android:layout_width="wrap_content"
         android:layout_height="@dimen/_250sdp"
         android:layout_marginTop="@dimen/_80sdp"
         android:contentDescription="@string/app_name"
@@ -35,7 +35,7 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonLogin"
-        android:layout_width="@dimen/_230sdp"
+        android:layout_width="@dimen/_250sdp"
         android:layout_height="@dimen/_40sdp"
         android:layout_marginTop="@dimen/_40sdp"
         android:background="@drawable/nextbutton"
@@ -53,7 +53,7 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonSignup"
-        android:layout_width="@dimen/_230sdp"
+        android:layout_width="@dimen/_250sdp"
         android:layout_height="@dimen/_40sdp"
         android:layout_marginTop="@dimen/_20sdp"
         android:background="@drawable/nextbutton"
