--- a/app/src/main/res/layout/activity_food_description.xml
+++ b/app/src/main/res/layout/activity_food_description.xml
@@ -43,7 +43,7 @@
             android:layout_height="wrap_content"
             android:padding="@dimen/_8sdp"
             android:fontFamily="@font/zenantique"
-            android:text="Price: Rs 0"
+            android:text=""
             android:textColor="@color/ParagraphTextColor"
             android:textSize="@dimen/_18ssp"
             android:textStyle="bold" />
@@ -79,7 +79,7 @@
         android:layout_marginTop="@dimen/_15sdp"
         android:fontFamily="@font/zenantique"
         android:letterSpacing=".1"
-        android:text="Description"
+        android:text="Description:"
         android:textColor="@color/SubHeadingTextColor"
         android:textSize="@dimen/_18ssp"
         android:textStyle="bold"
@@ -113,7 +113,7 @@
         android:layout_marginTop="@dimen/_18sdp"
         android:layout_marginStart="@dimen/_15sdp"
         android:fontFamily="@font/zenantique"
-        android:text="Ingredients"
+        android:text="Ingredients:"
         android:textColor="@color/SubHeadingTextColor"
         android:textSize="@dimen/_16ssp"
         android:textStyle="bold"
