--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -29,7 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Sorry, no item found!"
-        android:textSize="16sp"
+        android:textSize="@dimen/_18ssp"
         android:textColor="@android:color/holo_red_dark"
         android:layout_gravity="center"
         android:visibility="gone"
