--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -30,14 +30,14 @@
         android:layout_height="0dp"
         android:layout_marginTop="@dimen/_8sdp"
         android:layout_marginBottom="@dimen/_8sdp"
-        app:layout_constraintBottom_toTopOf="@+id/button2"
+        app:layout_constraintBottom_toTopOf="@+id/buttonProceed"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:background="@drawable/nextbutton"
-        android:id="@+id/button2"
+        android:id="@+id/buttonProceed"
         android:layout_width="@dimen/_260sdp"
         android:layout_height="@dimen/_35sdp"
         android:textAllCaps="false"
