--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -139,7 +139,7 @@
             android:textSize="@dimen/_10ssp" />
 
         <RadioButton
-            android:id="@+id/payViaPaytm"
+            android:id="@+id/payViaCashInDelivery"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_40sdp"
