--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -37,71 +37,53 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewCheckout" />
 
-    <EditText
+    <TextView
         android:id="@+id/editTextName"
-        android:layout_width="@dimen/_230sdp"
-        android:layout_height="@dimen/_40sdp"
-        android:layout_marginTop="@dimen/_10sdp"
-        android:background="@drawable/edittext"
-        android:ems="10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
         android:fontFamily="@font/zenantique"
-        android:hint="Name"
-        android:inputType="text"
-        android:paddingStart="@dimen/_10sdp"
+        android:text="Name: Ratna Katuwal"
+        android:textSize="@dimen/_14ssp"
         android:textColor="@color/ParagraphTextColor"
-        android:textColorHint="@color/SecondaryTextColor"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.239"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewDeliveryDetails" />
 
-    <EditText
+    <TextView
         android:id="@+id/editTextAddress"
-        android:layout_width="@dimen/_230sdp"
-        android:layout_height="@dimen/_40sdp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_10sdp"
-        android:background="@drawable/edittext"
-        android:ems="10"
         android:fontFamily="@font/zenantique"
-        android:hint="Address"
-        android:inputType="text"
-        android:paddingStart="@dimen/_10sdp"
+        android:text="Address: Gothatar"
         android:textColor="@color/ParagraphTextColor"
-        android:textColorHint="@color/SecondaryTextColor"
-        app:layout_constraintEnd_toEndOf="@+id/editTextName"
+        android:textSize="@dimen/_14ssp"
         app:layout_constraintStart_toStartOf="@+id/editTextName"
         app:layout_constraintTop_toBottomOf="@+id/editTextName" />
 
-    <EditText
+    <TextView
         android:id="@+id/editTextPhone"
-        android:layout_width="@dimen/_230sdp"
-        android:layout_height="@dimen/_40sdp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_10sdp"
-        android:background="@drawable/edittext"
-        android:ems="10"
         android:fontFamily="@font/zenantique"
-        android:hint="Phone"
-        android:inputType="phone"
-        android:paddingStart="@dimen/_10sdp"
+        android:text="Phone: 9898989898"
         android:textColor="@color/ParagraphTextColor"
-        android:textColorHint="@color/SecondaryTextColor"
-        app:layout_constraintEnd_toEndOf="@+id/editTextAddress"
+        android:textSize="@dimen/_14ssp"
         app:layout_constraintStart_toStartOf="@+id/editTextAddress"
         app:layout_constraintTop_toBottomOf="@+id/editTextAddress" />
 
-    <EditText
+    <TextView
         android:id="@+id/editTextEmailAddress"
-        android:layout_width="@dimen/_230sdp"
-        android:layout_height="@dimen/_40sdp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_10sdp"
-        android:background="@drawable/edittext"
-        android:ems="10"
         android:fontFamily="@font/zenantique"
-        android:hint="E-mail"
-        android:inputType="textEmailAddress"
-        android:paddingStart="@dimen/_10sdp"
+        android:text="Email: abc@gmail.com"
         android:textColor="@color/ParagraphTextColor"
-        android:textColorHint="@color/SecondaryTextColor"
-        app:layout_constraintEnd_toEndOf="@+id/editTextPhone"
+        android:textSize="@dimen/_14ssp"
         app:layout_constraintStart_toStartOf="@+id/editTextPhone"
         app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />
 
@@ -180,7 +162,7 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonConfirmOrder"
-        android:layout_width="@dimen/_180sdp"
+        android:layout_width="@dimen/_220sdp"
         android:layout_height="@dimen/_40sdp"
         android:layout_marginTop="@dimen/_35sdp"
         android:background="@drawable/nextbutton"
@@ -197,7 +179,7 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonCancel"
-        android:layout_width="@dimen/_180sdp"
+        android:layout_width="@dimen/_220sdp"
         android:layout_height="@dimen/_40sdp"
         android:layout_marginTop="@dimen/_15sdp"
         android:background="@drawable/nextbutton"
