--- a/app/src/main/res/layout/activity_register_screen.xml
+++ b/app/src/main/res/layout/activity_register_screen.xml
@@ -94,12 +94,32 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress" />
 
     <EditText
+        android:id="@+id/editTextAddress"
+        android:layout_width="@dimen/_250sdp"
+        android:layout_height="@dimen/_40sdp"
+        android:background="@drawable/edittext"
+        android:drawableStart="@drawable/phone"
+        android:drawablePadding="@dimen/_10sdp"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:ems="10"
+        android:fontFamily="@font/zenantique"
+        android:hint="Address"
+        android:inputType="text"
+        android:paddingStart="@dimen/_5sdp"
+        android:textColor="@color/ParagraphTextColor"
+        android:textColorHint="@color/SecondaryTextColor"
+        app:layout_constraintEnd_toEndOf="@+id/editTextPhone"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/editTextPhone"
+        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />
+
+    <EditText
         android:id="@+id/editTextPassword"
         android:layout_width="@dimen/_250sdp"
         android:layout_height="@dimen/_40sdp"
-        android:layout_marginTop="@dimen/_10sdp"
         android:background="@drawable/edittext"
         android:drawableStart="@drawable/lock"
+        android:layout_marginTop="@dimen/_10sdp"
         android:drawableEnd="@drawable/eye_show_svgrepo_com"
         android:drawablePadding="@dimen/_10sdp"
         android:ems="10"
@@ -110,18 +130,17 @@
         android:paddingEnd="@dimen/_10sdp"
         android:textColor="@color/ParagraphTextColor"
         android:textColorHint="@color/SecondaryTextColor"
-        app:layout_constraintEnd_toEndOf="@+id/editTextPhone"
-        app:layout_constraintStart_toStartOf="@+id/editTextPhone"
-        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />
-
+        app:layout_constraintEnd_toEndOf="@+id/editTextAddress"
+        app:layout_constraintStart_toStartOf="@+id/editTextAddress"
+        app:layout_constraintTop_toBottomOf="@+id/editTextAddress" />
 
     <EditText
         android:id="@+id/editTextConfirmPassword"
         android:layout_width="@dimen/_250sdp"
         android:layout_height="@dimen/_40sdp"
-        android:layout_marginTop="@dimen/_10sdp"
         android:background="@drawable/edittext"
         android:drawableStart="@drawable/lock"
+        android:layout_marginTop="@dimen/_10sdp"
         android:drawableEnd="@drawable/eye_show_svgrepo_com"
         android:drawablePadding="@dimen/_10sdp"
         android:ems="10"
