--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -11,28 +11,44 @@
         android:id="@+id/profileImage"
         android:layout_width="@dimen/_140sdp"
         android:layout_height="@dimen/_140sdp"
-        android:layout_marginTop="@dimen/_20sdp"
+        android:layout_marginTop="@dimen/_10sdp"
         android:scaleType="centerCrop"
-        android:src="@drawable/prabesh"
+        android:src="@drawable/sampleimage"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/buttonAddPhoto"
+        android:layout_width="@dimen/_220sdp"
+        android:layout_height="@dimen/_40sdp"
+        android:textAllCaps="false"
+        android:textSize="@dimen/_16ssp"
+        android:fontFamily="@font/zenantique"
+        android:textStyle="bold"
+        android:letterSpacing=".1"
+        android:background="@drawable/nextbutton"
+        android:text="Add Photo"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toEndOf="@+id/profileImage"
+        app:layout_constraintStart_toStartOf="@+id/profileImage"
+        app:layout_constraintTop_toBottomOf="@+id/profileImage" />
 
     <TextView
         android:id="@+id/textName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_10sdp"
         android:fontFamily="@font/zenantique"
         android:letterSpacing=".1"
         android:text="Ratna Katuwal"
+        android:layout_marginTop="@dimen/_15sdp"
         android:textColor="@color/SubHeadingTextColor"
         android:textSize="@dimen/_20ssp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/profileImage"
-        app:layout_constraintHorizontal_bias="0.503"
-        app:layout_constraintStart_toStartOf="@+id/profileImage"
-        app:layout_constraintTop_toBottomOf="@+id/profileImage" />
+        app:layout_constraintEnd_toEndOf="@+id/buttonAddPhoto"
+        app:layout_constraintStart_toStartOf="@+id/buttonAddPhoto"
+        app:layout_constraintTop_toBottomOf="@+id/buttonAddPhoto" />
 
     <TextView
         android:id="@+id/textEmail"
@@ -41,6 +57,7 @@
         android:fontFamily="@font/zenantique"
         android:text="parbesh456@gmail.com"
         android:textColor="@color/SubHeadingTextColor"
+        android:layout_marginTop="@dimen/_5sdp"
         android:textSize="@dimen/_20sdp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/textName"
@@ -67,7 +84,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/_40sdp"
-        android:layout_marginTop="@dimen/_3sdp"
+        android:layout_marginTop="@dimen/_5sdp"
         android:fontFamily="@font/zenantique"
         android:text="Name: Ratna Katuwal"
         android:textColor="@color/ParagraphTextColor"
@@ -81,6 +98,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/zenantique"
         android:text="Email: Ratna Katuwal"
+        android:layout_marginTop="@dimen/_5sdp"
         android:textColor="@color/ParagraphTextColor"
         android:textSize="@dimen/_14ssp"
         app:layout_constraintStart_toStartOf="@+id/textFullName"
@@ -93,6 +111,7 @@
         android:fontFamily="@font/zenantique"
         android:text="Address: Ratna Katuwal"
         android:textColor="@color/ParagraphTextColor"
+        android:layout_marginTop="@dimen/_5sdp"
         android:textSize="@dimen/_14ssp"
         app:layout_constraintStart_toStartOf="@+id/textEmailAddress"
         app:layout_constraintTop_toBottomOf="@+id/textEmailAddress" />
@@ -104,52 +123,50 @@
         android:fontFamily="@font/zenantique"
         android:text="Phone: Ratna Katuwal"
         android:textColor="@color/ParagraphTextColor"
+        android:layout_marginTop="@dimen/_5sdp"
         android:textSize="@dimen/_14ssp"
         app:layout_constraintStart_toStartOf="@+id/textAddress"
         app:layout_constraintTop_toBottomOf="@+id/textAddress" />
 
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/_8sdp"
-        android:fontFamily="@font/zenantique"
-        android:letterSpacing=".1"
-        android:text="Recent View"
-        android:textColor="@color/SubHeadingTextColor"
-        android:textSize="@dimen/_20ssp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textPhone" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/profileRecycleView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/buttonEditProfile"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView8" />
+    <!--    <androidx.recyclerview.widget.RecyclerView-->
+<!--        android:id="@+id/profileRecycleView"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="0dp"-->
+<!--        app:layout_constraintBottom_toTopOf="@+id/buttonEditProfile"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/textView8" />-->
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonEditProfile"
-        android:layout_width="@dimen/_100sdp"
+        android:layout_width="@dimen/_150sdp"
         android:layout_height="@dimen/_40sdp"
         android:background="@drawable/nextbutton"
-        android:textColor="@color/white"
         android:text="Edit Profile"
-        app:layout_constraintBottom_toTopOf="@+id/changePasswordButton"
+        android:fontFamily="@font/zenantique"
+        android:letterSpacing=".1"
+        android:textAllCaps="false"
+        android:textStyle="bold"
+        android:textSize="@dimen/_16ssp"
+        android:textColor="@color/white"
+        android:layout_marginTop="@dimen/_20sdp"
         app:layout_constraintEnd_toStartOf="@+id/buttonLogout"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textPhone" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonLogout"
-        android:layout_width="@dimen/_100sdp"
+        android:layout_width="@dimen/_110sdp"
         android:layout_height="@dimen/_40sdp"
         android:background="@drawable/nextbutton"
         android:textColor="@color/white"
         android:text="Logout"
+        android:textStyle="bold"
+        android:textAllCaps="false"
+        android:textSize="@dimen/_16sdp"
+        android:letterSpacing=".1"
+        android:fontFamily="@font/zenantique"
         app:layout_constraintBottom_toBottomOf="@+id/buttonEditProfile"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -161,11 +178,16 @@
         android:layout_width="@dimen/_200sdp"
         android:layout_height="@dimen/_40sdp"
         android:background="@drawable/nextbutton"
-        android:textColor="@color/white"
         android:text="Change Password"
+        android:fontFamily="@font/zenantique"
+        android:letterSpacing=".1"
+        android:textAllCaps="false"
+        android:textStyle="bold"
+        android:textSize="@dimen/_16ssp"
         android:layout_marginTop="@dimen/_20sdp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonEditProfile" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
