--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -25,11 +25,14 @@
 
     <EditText
         android:id="@+id/editTextPassword"
-        android:layout_width="@dimen/_230sdp"
+        android:layout_width="@dimen/_250sdp"
         android:layout_height="@dimen/_40sdp"
         android:ems="10"
         android:layout_marginTop="@dimen/_30sdp"
         android:inputType="textPassword"
+        android:drawableEnd="@drawable/eye_show_svgrepo_com"
+        android:drawablePadding="@dimen/_10sdp"
+        android:paddingEnd="@dimen/_5sdp"
         android:hint="Old Password"
         android:textColor="@color/ParagraphTextColor"
         android:fontFamily="@font/zenantique"
@@ -43,10 +46,13 @@
 
     <EditText
         android:id="@+id/editTextNewPassword"
-        android:layout_width="@dimen/_230sdp"
+        android:layout_width="@dimen/_250sdp"
         android:layout_height="@dimen/_40sdp"
         android:ems="10"
         android:layout_marginTop="@dimen/_10sdp"
+        android:drawableEnd="@drawable/eye_show_svgrepo_com"
+        android:drawablePadding="@dimen/_10sdp"
+        android:paddingEnd="@dimen/_5sdp"
         android:hint="New Password"
         android:background="@drawable/edittext"
         android:textColorHint="@color/ParagraphTextColor"
@@ -60,11 +66,14 @@
 
     <EditText
         android:id="@+id/editTextTextPassword3"
-        android:layout_width="@dimen/_230sdp"
+        android:layout_width="@dimen/_250sdp"
         android:layout_height="@dimen/_40sdp"
         android:ems="10"
         android:layout_marginTop="@dimen/_10sdp"
         android:hint="Confirm Password"
+        android:drawableEnd="@drawable/eye_show_svgrepo_com"
+        android:drawablePadding="@dimen/_10sdp"
+        android:paddingEnd="@dimen/_5sdp"
         android:background="@drawable/edittext"
         android:textColorHint="@color/SecondaryTextColor"
         android:paddingStart="@dimen/_10sdp"
