--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -59,8 +59,8 @@
         android:ems="10"
         android:background="@drawable/edittext"
         android:inputType="text"
+        android:hint="Full Name"
         android:textColor="@color/ParagraphTextColor"
-        android:text="Full Name"
         android:fontFamily="@font/zenantique"
         android:textColorHint="@color/SecondaryTextColor"
         android:paddingStart="@dimen/_10sdp"
