--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -41,7 +41,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/zenantique"
         android:letterSpacing=".1"
-        android:text="Ratna Katuwal"
+        android:text=""
         android:layout_marginTop="@dimen/_15sdp"
         android:textColor="@color/SubHeadingTextColor"
         android:textSize="@dimen/_20ssp"
@@ -55,7 +55,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/zenantique"
-        android:text="parbesh456@gmail.com"
+        android:text=""
         android:textColor="@color/SubHeadingTextColor"
         android:layout_marginTop="@dimen/_5sdp"
         android:textSize="@dimen/_20sdp"
@@ -86,7 +86,7 @@
         android:layout_marginStart="@dimen/_40sdp"
         android:layout_marginTop="@dimen/_5sdp"
         android:fontFamily="@font/zenantique"
-        android:text="Name: Ratna Katuwal"
+        android:text=""
         android:textColor="@color/ParagraphTextColor"
         android:textSize="@dimen/_14ssp"
         app:layout_constraintStart_toStartOf="parent"
@@ -97,7 +97,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/zenantique"
-        android:text="Email: Ratna Katuwal"
+        android:text=""
         android:layout_marginTop="@dimen/_5sdp"
         android:textColor="@color/ParagraphTextColor"
         android:textSize="@dimen/_14ssp"
@@ -109,7 +109,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/zenantique"
-        android:text="Address: Ratna Katuwal"
+        android:text=""
         android:textColor="@color/ParagraphTextColor"
         android:layout_marginTop="@dimen/_5sdp"
         android:textSize="@dimen/_14ssp"
@@ -121,7 +121,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/zenantique"
-        android:text="Phone: Ratna Katuwal"
+        android:text=""
         android:textColor="@color/ParagraphTextColor"
         android:layout_marginTop="@dimen/_5sdp"
         android:textSize="@dimen/_14ssp"
