--- a/app/src/main/res/layout/bill.xml
+++ b/app/src/main/res/layout/bill.xml
@@ -122,10 +122,10 @@
         app:layout_constraintTop_toBottomOf="@+id/view4" />
 
     <TextView
-        android:id="@+id/billName"
+        android:id="@+id/billDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Name: "
+        android:text="Billing Date: "
         android:layout_marginStart="@dimen/_10sdp"
         android:layout_marginTop="@dimen/_5sdp"
         android:fontFamily="@font/zenantique"
@@ -133,6 +133,19 @@
         android:textColor="@color/SecondaryTextColor"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/billToLabel" />
+
+    <TextView
+        android:id="@+id/billName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Name: "
+        android:layout_marginStart="@dimen/_10sdp"
+        android:layout_marginTop="@dimen/_5sdp"
+        android:fontFamily="@font/zenantique"
+        android:textColor="@color/SecondaryTextColor"
+        android:textSize="@dimen/_14ssp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/billDate" />
 
     <TextView
         android:id="@+id/billAddress"
@@ -173,208 +186,54 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/billContact" />
 
-    <TableLayout
-        android:id="@+id/itemTableLayout"
+    <View
+        android:id="@+id/view5"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="#FFFFFF"
-        android:padding="@dimen/_4sdp"
-        android:stretchColumns="1"
-        app:layout_constraintTop_toBottomOf="@id/billEmail"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_height="2dp"
+        android:layout_marginTop="@dimen/_5sdp"
+        android:background="@color/special"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="@dimen/_5sdp">
-
-        <!-- Header Row -->
-        <TableRow
-            android:background="#D7D7F7" >
-            <TextView
-                android:id="@+id/sn"
-                android:text="S.N"
-                android:textStyle="bold"
-                android:fontFamily="@font/zenantique"
-                android:textColor="@color/special"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="4dp"/>
-            <TextView
-                android:id="@+id/itemDescription"
-                android:text="Item Description"
-                android:textStyle="bold"
-                android:textAlignment="center"
-                android:fontFamily="@font/zenantique"
-                android:textColor="@color/special"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:padding="4dp"/>
-            <TextView
-                android:id="@+id/qty"
-                android:text="Qty."
-                android:textStyle="bold"
-                android:fontFamily="@font/zenantique"
-                android:textColor="@color/special"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="4dp"/>
-            <TextView
-                android:id="@+id/amount"
-                android:text="Amount"
-                android:textStyle="bold"
-                android:fontFamily="@font/zenantique"
-                android:textColor="@color/special"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="4dp"/>
-        </TableRow>
-
-        <!-- Divider Line -->
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#000000" />
-
-        <!-- Sample Item Row -->
-        <TableRow
-            android:padding="4dp">
-            <TextView
-                android:id="@+id/snNum"
-                android:text="1"
-                android:textAlignment="center"
-                android:fontFamily="@font/zenantique"
-                android:textColor="@color/ParagraphTextColor"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="4dp"/>
-            <TextView
-                android:id="@+id/item"
-                android:text="Sample Item"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/zenantique"
-                android:textColor="@color/ParagraphTextColor"
-                android:layout_weight="1"
-                android:padding="4dp"/>
-            <TextView
-                android:id="@+id/qtyNum"
-                android:text="2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/ParagraphTextColor"
-                android:fontFamily="@font/zenantique"
-                android:textAlignment="center"
-                android:padding="4dp"/>
-            <TextView
-                android:id="@+id/amountNum"
-                android:text="200"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/ParagraphTextColor"
-                android:fontFamily="@font/zenantique"
-                android:textAlignment="center"
-                android:padding="4dp"/>
-        </TableRow>
-
-        <!-- Divider Line -->
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#000000" />
-
-        <!-- Total Row -->
-        <TableRow
-            android:padding="4dp">
-            <TextView
-                android:id="@+id/grandTotal"
-                android:text="Total Amount with delivery charges 100:"
-                android:layout_span="3"
-                android:fontFamily="@font/zenantique"
-                android:textColor="@color/ParagraphTextColor"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="4dp"/>
-            <TextView
-                android:id="@+id/textGrandTotalAmount"
-                android:text="300"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:fontFamily="@font/zenantique"
-                android:textColor="@color/ParagraphTextColor"
-                android:padding="4dp"/>
-        </TableRow>
-
-        <!-- Divider Line -->
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#000000" />
-
-        <!-- Amount in Words Row -->
-        <TableRow
-            android:padding="4dp">
-            <TextView
-                android:id="@+id/amountWord"
-                android:text="Three hundered only."
-                android:layout_span="4"
-                android:fontFamily="@font/zenantique"
-                android:textColor="@color/ParagraphTextColor"
-                android:textStyle="bold"
-                android:textAlignment="center"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingTop="8dp"
-                android:padding="4dp"/>
-        </TableRow>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#000000" />
-    </TableLayout>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/billEmail" />
 
     <TextView
-        android:id="@+id/billingDate"
+        android:id="@+id/billLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Billing Date: "
-        android:layout_marginStart="@dimen/_10sdp"
+        android:text="Ordered Items"
+        android:textColor="@color/HeadingTextColor"
+        android:fontFamily="@font/orbitron"
+        android:textSize="@dimen/_20ssp"
+        android:textStyle="bold"
         android:layout_marginTop="@dimen/_5sdp"
-        android:fontFamily="@font/zenantique"
-        android:textSize="@dimen/_14ssp"
-        android:textColor="@color/SecondaryTextColor"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/itemTableLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/view5" />
+
+    <!-- Container to dynamically add food items -->
+    <LinearLayout
+        android:id="@+id/orderedItemsContainer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="16dp"
+        app:layout_constraintTop_toBottomOf="@id/billLabel"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/thankYouTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Thank you!"
-        android:textColor="@color/HeadingTextColor"
         android:fontFamily="@font/orbitron"
         android:letterSpacing=".1"
-        android:textSize="@dimen/_18ssp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/thankYouMessageTextView"
-        app:layout_constraintEnd_toEndOf="@+id/thankYouMessageTextView"
-        app:layout_constraintStart_toStartOf="@+id/thankYouMessageTextView" />
-
-    <TextView
-        android:id="@+id/thankYouMessageTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:paddingTop="4dp"
+        android:text="Thank you!"
+        android:textColor="@color/HeadingTextColor"
+        android:textSize="@dimen/_20ssp"
         android:layout_marginBottom="@dimen/_10sdp"
-        android:fontFamily="@font/zenantique"
-        android:textAlignment="center"
-        android:text="We appreciate your trust in us. Looking forward to serving you again!"
-        android:textColor="@color/ParagraphTextColor"
-        android:textSize="14sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-
-<!--    i have created a custom bill. now your task to to make the bill dynamic with using Checkout activity. company details remaining same-->
