--- a/app/src/main/res/layout/menu_item.xml
+++ b/app/src/main/res/layout/menu_item.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:background="@color/BackgroundColor"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -11,7 +10,9 @@
         android:layout_width="@dimen/_285sdp"
         android:layout_height="@dimen/_80sdp"
         app:cardCornerRadius="@dimen/_16sdp"
-        android:layout_marginTop="@dimen/_18sdp"
+        android:layout_marginTop="@dimen/_8sdp"
+        android:layout_marginBottom="@dimen/_4sdp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" >
@@ -33,46 +34,50 @@
 
             <TextView
                 android:id="@+id/menuFoodName"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_11sdp"
-                android:textSize="@dimen/_18ssp"
-                android:textColor="@color/ParagraphTextColor"
+                android:ellipsize="end"
+                android:layout_marginTop="@dimen/_8sdp"
+                android:layout_marginStart="@dimen/_10sdp"
                 android:fontFamily="@font/zenantique"
+                android:maxLines="1"
                 android:text="TextView"
-                app:layout_constraintBottom_toBottomOf="@+id/menuFoodImage"
+                android:textColor="@color/ParagraphTextColor"
+                android:textSize="@dimen/_18ssp"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/menuFoodImage"
-                app:layout_constraintTop_toTopOf="@+id/menuFoodImage" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/menuFoodPrice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_20sdp"
+                android:ellipsize="end"
                 android:fontFamily="@font/zenantique"
+                android:maxLines="1"
+                android:layout_marginStart="@dimen/_10sdp"
+                android:layout_marginBottom="@dimen/_14sdp"
                 android:text="TextView"
                 android:textColor="@color/ParagraphTextColor"
                 android:textSize="@dimen/_14ssp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.588"
-                app:layout_constraintStart_toEndOf="@+id/menuFoodName"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/menuFoodImage" />
 
             <TextView
                 android:id="@+id/menuAddToCartBtn"
                 android:layout_width="@dimen/_65sdp"
                 android:layout_height="@dimen/_18sdp"
-                android:layout_marginTop="@dimen/_12sdp"
                 android:background="@drawable/add_to_cart_btn"
                 android:fontFamily="@font/zenantique"
                 android:text="@string/addToCartText"
+                android:layout_marginBottom="@dimen/_8sdp"
                 android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textSize="@dimen/_10ssp"
-                app:layout_constraintEnd_toEndOf="@+id/menuFoodPrice"
-                app:layout_constraintHorizontal_bias="0.619"
-                app:layout_constraintStart_toStartOf="@+id/menuFoodPrice"
-                app:layout_constraintTop_toBottomOf="@+id/menuFoodPrice" />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/menuFoodPrice"
+                app:layout_constraintTop_toTopOf="@+id/menuFoodPrice" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
